[package]
name = "yewlife"
version = "0.1.0"
authors = ["42yeah <42yeah@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.73"
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"

[dependencies.web-sys]
version = "0.3.50"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
]
